Profile picture alignemnt fixes

--- a/frontend/gitdrnk/src/components/Messages/Styles/Message.scss
+++ b/frontend/gitdrnk/src/components/Messages/Styles/Message.scss
@@ -11,15 +11,6 @@
   clear: both;
   display: table;
 }
-/* Style images */
-.Message img {
-  float: left;
-  max-width: 60px;
-  width: 100%;
-  margin-right: 20px;
-  border-radius: 50%;
-}
-
 
 /* Darker chat container */
 .darker {
